--- a/index.html
+++ b/index.html
@@ -1,4 +1,26 @@
-<!DOCTYPE html>
+<!DOCTYPE html><meta name="google-site-verification=pWatsMNCbuA6w8ziNuq3c6wCJz3ugTq-BdwTKcorJEk" />
+
+
+<meta name="google-adsense-account" content="ca-pub-9850650985058210"><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9850650985058210"
+     crossorigin="anonymous"></script>
+
+
+<script async custom-element="amp-auto-ads"
+        src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
+</script>
+
+<meta name="google-adsense-account" content="ca-pub-9850650985058210"><meta name="google-site-verification=pWatsMNCbuA6w8ziNuq3c6wCJz3ugTq-BdwTKcorJEk" />
+
+
+<meta name="google-adsense-account" content="ca-pub-9850650985058210"><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9850650985058210"
+     crossorigin="anonymous"></script>
+
+
+<script async custom-element="amp-auto-ads"
+        src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
+</script>
+
+<meta name="google-adsense-account" content="ca-pub-9850650985058210"><meta name="google-site-verification" content="FUe3NjQe1rXFvoFGF-xPq5cxoggW3bzkYYSWsUtDoQ0" />
 <html style="background: #0f0f0f" lang="en" >
     <head>
         <base href="%BASE_URL%"/>
