--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html><meta name="google-site-verification=pWatsMNCbuA6w8ziNuq3c6wCJz3ugTq-BdwTKcorJEk" />
+<!DOCTYPE html>
+<meta name="google-site-verification=pWatsMNCbuA6w8ziNuq3c6wCJz3ugTq-BdwTKcorJEk" />
 
 
 <meta name="google-adsense-account" content="ca-pub-9850650985058210"><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9850650985058210"
@@ -46,6 +47,9 @@
             >We're sorry but Piped doesn't work properly without JavaScript enabled. Please enable it to
             continue.</strong
         >
+<amp-auto-ads type="adsense"
+        data-ad-client="ca-pub-9850650985058210">
+</amp-auto-ads>
     </noscript>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
