--- a/index.html
+++ b/index.html
@@ -51,6 +51,6 @@
         data-ad-client="ca-pub-9850650985058210">
 </amp-auto-ads>
     </noscript>
-    <div id="app"></div>
+    <div id="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9850650985058210"></div>
     <script type="module" src="/src/main.js"></script>
 </html>
